--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
         <title>IT 4403 Individual Project: Milestone #1</title>
     </head>
     <body>
-        <h1>IT 4403 Individual Project</h1>
-        <h2>Omar Rodriguez <br/> 
-            College of Computing and Software Engineering <br/>
-            This web page uses JavaScript/jQuery to read data and display it nicely. This is Project Milestone 1.
-        </h2>
-        <h3>IT 4403: Advanced Web and Mobile App <br/>
-            <a href="https://www.kennesaw.edu/ccse/academics/information-technology/">Department of Information Technology</a>
-        </h3>
-        <h3>Project Information: <br/>
-            Milestone 1: JSON<br/>
-            Milestone 2: Google Books API <br/>
-            Milestone 3: Book Search AJAX <br/>
-            Milestone 4: Improved SPA UI
-        </h3>
+        <center>
+         <h1>IT 4403 Individual Project</h1>
+            <h2>Omar Rodriguez <br/> 
+                College of Computing and Software Engineering <br/>
+                This web page uses JavaScript/jQuery to read data and display it nicely. This is Project Milestone 1.
+            </h2>
+           <h3>IT 4403: Advanced Web and Mobile App <br/>
+                <a href="https://www.kennesaw.edu/ccse/academics/information-technology/">Department of Information Technology</a>
+            </h3>
+         <h3>Project Information: <br/>
+              Milestone 1: JSON<br/>
+              Milestone 2: Google Books API <br/>
+              Milestone 3: Book Search AJAX <br/>
+             Milestone 4: Improved SPA UI
+         </h3>
+        </center>
     </body>
 </html>
