added json data

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
               Milestone 3: Book Search AJAX <br/>
              Milestone 4: Improved SPA UI
          </h3>
+         <table>
+            <thead>
+                <tr>
+                    <th> Book Title</th>
+                    <th> Book Description</th>
+                </tr>
+
+            </thead>
+            <tbody id="data-output" >
+
+            </tbody>
+         </table>
         </center>
     </body>
 </html>
