--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
         <link rel=”stylesheet.css” href=”https://stackpath.bootstrapcdn.com/
             bootstrap/4.4.1/css/bootstrap.min.css” integrity=”sha384-Vkoo8x4CGsO3+Hhxv8T/
             Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh” crossorigin=”anonymous”>
-        <script src=”https://code.jquery.com/jquery-3.4.1.slim.min.js” integrity=”sha384-
-        J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n”
-        crossorigin=”anonymous”></script>
-        <script src=”https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js”
-        integrity=”sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo”
-        crossorigin=”anonymous”></script>
-        <script src=”https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js”
-        integrity=”sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6”
-        crossorigin=”anonymous”></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <title>IT 4403 Individual Project: Milestone #1</title>
     </head>
     <body>
@@ -34,14 +26,30 @@
          <table>
             <thead>
                 <tr>
+                    <th> Book Author</th>
                     <th> Book Title</th>
-                    <th> Book Description</th>
+                    <th>Book Description</th>
                 </tr>
-
             </thead>
-            <tbody id="data-output" >
-
-            </tbody>
+            <script> 
+                $(document).ready(function () { 
+                    $.getJSON("google-books-search",  
+                            function (data) { 
+                        var book = ''; 
+                        $.each(data, function (key, value) { 
+                            book += '<tr>'; 
+                            book += '<td>' +  
+                                value.authors + '</td>'; 
+                            book += '<td>' +  
+                                value.title + '</td>'; 
+                            book += '<td>' +  
+                                value.description + '</td>'; 
+                            book += '</tr>'; 
+                        }); 
+                        $('#table').append(book); 
+                    }); 
+                }); 
+            </script> 
          </table>
         </center>
     </body>
