--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
             display: block;
             margin: auto;
         }
+        .floating-box {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            flex-direction: column;
+        }
+        .floating-box a {
+            margin: 5px;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .floating-box a:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -44,6 +63,10 @@
             </tbody>
         </table>
     </center>
+    <div class="floating-box">
+        <a href="book.html">Book Details</a>
+        <a href="bookshelf.html">My Bookshelf</a>
+    </div>
     <script> 
         $(document).ready(function () { 
             $.getJSON("https://www.googleapis.com/books/v1/volumes?q=modern%20web", function (data) { 
@@ -76,5 +99,6 @@
     </script> 
 </body>
 </html>
+
 
 
