search bar in book details

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1>IT 4403 Individual Project</h1>
         <h2>Omar Rodriguez <br/> 
             College of Computing and Software Engineering <br/>
-            This web page uses JavaScript/jQuery to read data and display it nicely. This is Project Milestone 1.
+            Added main menu with two additional web pages. This is Project Milestone 2.
         </h2>
         <h3>IT 4403: Advanced Web and Mobile App <br/>
             <a href="https://www.kennesaw.edu/ccse/academics/information-technology/">Department of Information Technology</a>
