--- a/book.html
+++ b/book.html
@@ -56,11 +56,18 @@
         .floating-box a:hover {
             background-color: #0056b3;
         }
+        .search-bar {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Book Details - IT 4403 Individual Project Milestone 2 </h1>
+        <h1>Book Details - IT 4403 Individual Project Milestone 2</h1>
+        <div class="search-bar">
+            <input type="text" id="search-input" class="form-control" placeholder="Search for a book">
+            <button id="search-button" class="btn btn-primary mt-2">Search</button>
+        </div>
         <div id="book-details" class="book-details">
             <img id="book-cover" class="book-cover" src="" alt="Book Cover">
             <h2 id="book-title"></h2>
@@ -80,24 +87,53 @@
     </div>
     <script>
         $(document).ready(function () {
+            const displayBookDetails = (book) => {
+                $('#book-cover').attr('src', book.imageLinks ? book.imageLinks.thumbnail : 'https://via.placeholder.com/200x300?text=No+Image');
+                $('#book-title').text(book.title || 'No Title');
+                $('#book-authors').text('Authors: ' + (book.authors ? book.authors.join(", ") : 'N/A'));
+                $('#book-publisher').text('Publisher: ' + (book.publisher || 'N/A'));
+                $('#book-publishedDate').text('Published Date: ' + (book.publishedDate || 'N/A'));
+                $('#book-description').text('Description: ' + (book.description || 'N/A'));
+                $('#book-pageCount').text('Page Count: ' + (book.pageCount || 'N/A'));
+                $('#book-categories').text('Categories: ' + (book.categories ? book.categories.join(", ") : 'N/A'));
+                $('#book-averageRating').text('Average Rating: ' + (book.averageRating || 'N/A'));
+                $('#book-infoLink').html('<a href="' + book.infoLink + '" target="_blank">More Info</a>');
+            };
+
+            const fetchBookDetails = (bookId) => {
+                const apiUrl = 'https://www.googleapis.com/books/v1/volumes/' + bookId;
+                $.getJSON(apiUrl, function (data) {
+                    displayBookDetails(data.volumeInfo);
+                }).fail(function () {
+                    $('#book-details').html('<p>An error occurred while fetching the book details.</p>');
+                });
+            };
+
+            const searchBook = (query) => {
+                const searchUrl = 'https://www.googleapis.com/books/v1/volumes?q=' + query;
+                $.getJSON(searchUrl, function (data) {
+                    if (data.items && data.items.length > 0) {
+                        displayBookDetails(data.items[0].volumeInfo);
+                    } else {
+                        $('#book-details').html('<p>No books found.</p>');
+                    }
+                }).fail(function () {
+                    $('#book-details').html('<p>An error occurred while searching for the book.</p>');
+                });
+            };
+
+            $('#search-button').click(function () {
+                const query = $('#search-input').val();
+                if (query) {
+                    searchBook(query);
+                }
+            });
+
             const urlParams = new URLSearchParams(window.location.search);
             const bookId = urlParams.get('id');
-            const apiUrl = 'https://www.googleapis.com/books/v1/volumes/' + bookId;
-
-            $.getJSON(apiUrl, function (data) {
-                $('#book-cover').attr('src', data.volumeInfo.imageLinks ? data.volumeInfo.imageLinks.thumbnail : 'https://via.placeholder.com/200x300?text=No+Image');
-                $('#book-title').text(data.volumeInfo.title || 'No Title');
-                $('#book-authors').text('Authors: ' + (data.volumeInfo.authors ? data.volumeInfo.authors.join(", ") : 'N/A'));
-                $('#book-publisher').text('Publisher: ' + (data.volumeInfo.publisher || 'N/A'));
-                $('#book-publishedDate').text('Published Date: ' + (data.volumeInfo.publishedDate || 'N/A'));
-                $('#book-description').text('Description: ' + (data.volumeInfo.description || 'N/A'));
-                $('#book-pageCount').text('Page Count: ' + (data.volumeInfo.pageCount || 'N/A'));
-                $('#book-categories').text('Categories: ' + (data.volumeInfo.categories ? data.volumeInfo.categories.join(", ") : 'N/A'));
-                $('#book-averageRating').text('Average Rating: ' + (data.volumeInfo.averageRating || 'N/A'));
-                $('#book-infoLink').html('<a href="' + data.volumeInfo.infoLink + '" target="_blank">More Info</a>');
-            }).fail(function () {
-                $('#book-details').html('<p>An error occurred while fetching the book details.</p>');
-            });
+            if (bookId) {
+                fetchBookDetails(bookId);
+            }
         });
     </script>
 </body>
